--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class='col-md-8  col-sm-offset-8'>
+    <div class='col-md-8'>
       <div class="panel panel-primary">
         <div class="panel-heading">Actualizar Datos</div>
         <div class="panel-body">
@@ -13,7 +13,7 @@
           
             <div class="field">
               <%= f.label :email %><br />
-              <%= f.email_field :email, autofocus: true %>
+              <%= f.email_field :email, autofocus: true , class: "form-control", :placeholder =>'email' %>
             </div>
             
           
